<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Location App</string>
    <string name="title_activity_maps" tools:ignore="MissingTranslation">Map</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="create" translatable="false">Create a new</string>
    <string name="reminder" translatable="false">Reminder</string>
    <string name="testmsg" translatable="false">Text message</string>
    <string name="search" translatable="false">Search</string>
    <string name="viewset" translatable="false">View my set notifications</string>
    <string name="title" translatable="false">Location-based reminders</string>
    <string name="setReminderText" translatable="false">Set reminder text</string>
    <string name="reminderName" translatable="false">Reminder name</string>
    <string name="selectLocation" translatable="false">Select location</string>
    <string name="reminderLocal" translatable="false">Reminder location</string>
    <string name="selectedLocal" translatable="false">Selected location</string>
    <string name="finish" translatable="false">Finish</string>
    <string name="TextName" translatable="false">Text name</string>
    <string name="textLocation" translatable="false">Text location</string>
    <string name="settext" translatable="false">Set text</string>
    <string name="sendTo" translatable="false">Send to</string>
    <string name="phoneNum" translatable="false">Phone number</string>
    <string name="select" translatable="false">Select location</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="Title" translatable="false">Title</string>
    <string name="ReminderText" translatable="false">Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_message_dialog">MessageDialog</string>
</resources>